--- a/views/datos.handlebars
+++ b/views/datos.handlebars
@@ -14,11 +14,11 @@
       </div>
       <div class="form-group col-12 col-sm-6">
         <label>Password</label>
-        <input type="password" class="form-control m-auto" name="password" value="" />
+        <input type="password" class="form-control m-auto" name="password" />
       </div>
       <div class="form-group col-12 col-sm-6">
         <label>Repita la password</label>
-        <input type="password" class="form-control m-auto" name="password2" value="" />
+        <input type="password" class="form-control m-auto" name="password2" />
       </div>
       <div class="form-group col-12 col-sm-6">
         <label>Años de experiencia</label>
@@ -32,6 +32,8 @@
     <div class="mb-1">
       <button class="btn btn-primary">Actualizar</button>
     </div>
+  </form>
+  <form action="/skaters/delete" method="POST">
     <div>
       <button class="btn btn-danger">Eliminar cuenta</button>
     </div>
